--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -69,6 +69,7 @@ body, html {
         height: 100%;
         padding: 0 50px;
         background: url('../assets/images/shapes.svg');
+        z-index: 2;
 
         .text-content {
             max-width: 600px;
