--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,6 +5,12 @@ body, html {
   background-color: #1c1c1c;
 }
 
+h1 {
+  color: #66C3FF;
+  margin-left: 24px;
+  font-size: 36px;
+}
+
 .skewed {
   position: absolute;
   bottom: -75px;
@@ -158,27 +164,6 @@ body, html {
   margin-top: 80px;
   padding: 0 50px;
 }
-.about-section h1 {
-  color: #66C3FF;
-  margin-left: 24px;
-  font-size: 36px;
-}
-.about-section h1::before, .about-section h1::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  width: 20px;
-  height: 20px;
-  background-color: #f39c12;
-  border-radius: 50%;
-  transform: translateY(-50%);
-}
-.about-section h1::before {
-  left: -40px;
-}
-.about-section h1::after {
-  right: -40px;
-}
 .about-section .paragraphs {
   display: flex;
   gap: 5%;
@@ -186,6 +171,59 @@ body, html {
 .about-section .paragraphs p {
   line-height: 1.6em;
 }
+
+.portfolio-section {
+  margin: 50px 0;
+}
+
+.card-container {
+  display: flex;
+  justify-content: space-around;
+}
+.card-container .omniclip-card {
+  background: url("../assets/images/omniclip-thumbnail.jpg") no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.card-container .card {
+  position: relative;
+  width: 33%;
+  height: 400px;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+}
+.card-container .card:hover {
+  cursor: pointer;
+}
+.card-container .card .card-title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  opacity: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 10px 20px;
+  font-size: 24px;
+  border-radius: 5px;
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+.card-container .card:hover .card-title {
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1);
+}
+@media (max-width: 768px) {
+  .card-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .card-container .card {
+    width: 100%;
+  }
+}
+
 @media (max-width: 768px) {
   .section-divider {
     margin-bottom: 290px;
