--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,6 +7,32 @@ body, html {
     background-color: $secondary-color;
 }
 
+h1 {
+    color: $accent-color;
+    margin-left: 24px;
+    font-size: 36px;
+
+    // &::before,
+    // &::after {
+    //     content: '';
+    //     position: absolute;
+    //     top: 50%;
+    //     width: 20px;
+    //     height: 20px;
+    //     background-color: #f39c12; // Adjust the circle color
+    //     border-radius: 50%;
+    //     transform: translateY(-50%);
+    // }
+
+    // &::before {
+    //     left: -40px; // Adjust the spacing from the text
+    // }
+
+    // &::after {
+    //     right: -40px; // Adjust the spacing from the text
+    // }
+}
+
 .skewed {
     position: absolute;
     bottom: -75px;
@@ -197,32 +223,6 @@ body, html {
     margin-top: 80px;
     padding: 0 50px;
 
-    h1 {
-        color: $accent-color;
-        margin-left: 24px;
-        font-size: 36px;
-
-        &::before,
-        &::after {
-            content: '';
-            position: absolute;
-            top: 50%;
-            width: 20px;
-            height: 20px;
-            background-color: #f39c12; // Adjust the circle color
-            border-radius: 50%;
-            transform: translateY(-50%);
-        }
-
-        &::before {
-            left: -40px; // Adjust the spacing from the text
-        }
-
-        &::after {
-            right: -40px; // Adjust the spacing from the text
-        }
-    }
-
     .paragraphs {
         display: flex;
         gap: 5%;
@@ -231,14 +231,67 @@ body, html {
             
         }
     }
-
-    @media (max-width: 480px) {
-        // .paragraphs {
-        //     display: block;
-        // }
-    }
 }
 
+
+.portfolio-section {
+    // display: flex;
+    // justify-content: space-around;
+    margin: 50px 0;
+}
+
+.card-container {
+    display: flex;
+    justify-content: space-around;
+
+    .omniclip-card {
+        background: url('../assets/images/omniclip-thumbnail.jpg') no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+    .card {
+        position: relative;
+        width: 33%;
+        height: 400px;
+        border-radius: 10px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s ease-in-out;
+
+        &:hover {
+            cursor: pointer;
+        }
+
+        .card-title {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0);
+            opacity: 0;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 10px 20px;
+            font-size: 24px;
+            border-radius: 5px;
+            transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+        }
+
+        &:hover .card-title {
+            opacity: 1;
+            transform: translate(-50%, -50%) scale(1);
+        }
+    }
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        .card {
+            width: 100%;
+        }
+    }
+}
+  
 @media (max-width: 768px) {
     .section-divider {
         margin-bottom: 290px;
