hero section re-sizing to prevent about section overlapping

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,7 +13,6 @@ h1 {
 
 .skewed {
   position: absolute;
-  bottom: -75px;
   right: 0;
   left: 0;
   width: 100%;
@@ -25,7 +24,7 @@ h1 {
 
 .hero {
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -62,7 +61,7 @@ h1 {
   justify-content: space-between;
   align-items: center;
   height: 100%;
-  padding: 0 50px;
+  padding: 200px 50px;
   background: url("../assets/images/shapes.svg");
   z-index: 2;
 }
@@ -174,6 +173,7 @@ h1 {
 
 .portfolio-section {
   margin: 50px 0;
+  padding: 0 50px;
 }
 
 .card-container {
@@ -226,9 +226,6 @@ h1 {
 
 @media (max-width: 768px) {
   .section-divider {
-    margin-bottom: 290px;
-  }
-  .section-divider .skewed {
-    bottom: -231px;
+    margin-bottom: 80px;
   }
 }/*# sourceMappingURL=index.css.map */
