--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -33,9 +33,8 @@ h1 {
     // }
 }
 
-.skewed {
+.skewed-right {
     position: absolute;
-    // bottom: 175px;
     right: 0;
     left: 0;
     width: 100%;
@@ -43,8 +42,18 @@ h1 {
     background: #2c3e50;
     z-index: 0;
     transform: skewY(8deg);
-    // transform-origin: top right;
-  }
+}
+
+.skewed-left {
+    position: absolute;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: #2c3e50;
+    z-index: 0;
+    transform: skewY(-8deg);
+}
 
 .hero {
     position: relative;
@@ -222,13 +231,15 @@ h1 {
     color: white;
     margin-top: 80px;
     padding: 0 50px;
+    z-index: 1;
+    position: relative;
 
     .paragraphs {
         display: flex;
         gap: 5%;
         p {
             line-height: 1.6em;
-            
+            z-index: 1;
         }
     }
 }
@@ -244,10 +255,19 @@ h1 {
     justify-content: space-around;
 
     .omniclip-card {
-        background: url('../assets/images/omniclip-thumbnail.jpg') no-repeat;
-        background-size: cover;
+        background: url('../assets/images/omni-thumbnail.jpg') no-repeat;
+        background-size: contain;
         background-position: center;
+        background-color: #000;
     }
+
+    .tdd-card {
+        background: url('../assets/images/tdd_logo.png') no-repeat;
+        background-size: contain;
+        background-position: center;
+        background-color: #111;
+    }
+
     .card {
         position: relative;
         width: 33%;
@@ -255,6 +275,7 @@ h1 {
         border-radius: 10px;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         transition: transform 0.3s ease-in-out;
+        z-index: 1;
 
         &:hover {
             cursor: pointer;
@@ -280,7 +301,7 @@ h1 {
         }
     }
 
-    @media (max-width: 768px) {
+    @media (max-width: 1200px) {
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -290,6 +311,63 @@ h1 {
         }
     }
 }
+
+
+.scroll-section {
+    position: relative;
+    height: 200vh; // This ensures there's enough space to scroll
+
+    .shape {
+        position: absolute;
+        opacity: 0; // Shapes are initially invisible
+        transform: translateY(50px); // Shapes are slightly offscreen
+        transition: opacity 0.5s ease, transform 0.5s ease; // Smooth transition for fade and movement
+
+        // Shape-specific styles and positions
+        &.shape-1 {
+            width: 100px;
+            height: 100px;
+            background: url('../assets/shapes/red-square.svg') no-repeat center;
+            background-size: contain;
+            top: 20%;
+            left: 10%;
+        }
+
+        &.shape-2 {
+            width: 150px;
+            height: 150px;
+            background: url('../assets/shapes/blue-circle.svg') no-repeat center;
+            background-size: contain;
+            top: 40%;
+            left: 50%;
+        }
+
+        &.shape-3 {
+            width: 140px;
+            height: 140px;
+            background: url('../assets/shapes/blue-hollow-circle.svg') no-repeat center;
+            background-size: contain;
+            top: 60%;
+            left: 30%;
+        }
+
+        &.shape-4 {
+            width: 180px;
+            height: 180px;
+            background: url('../assets/shapes/red-circle.svg') no-repeat center;
+            background-size: contain;
+            top: 80%;
+            left: 70%;
+        }
+
+        // Class added when the shape should be visible
+        &.visible {
+            opacity: 1;
+            transform: translateY(0); // Move into view when visible
+        }
+    }
+}
+
   
 @media (max-width: 768px) {
     .section-divider {
