--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -317,53 +317,82 @@ h1 {
     position: relative;
     height: 200vh; // This ensures there's enough space to scroll
 
+    .shape-container {
+        position: relative;
+        height: 100%;
+        width: 100%;
+    }
+    
     .shape {
         position: absolute;
-        opacity: 0; // Shapes are initially invisible
-        transform: translateY(50px); // Shapes are slightly offscreen
-        transition: opacity 0.5s ease, transform 0.5s ease; // Smooth transition for fade and movement
+        opacity: 0; // Start with opacity 0
+        transform: scale(0.5); // Start with a smaller size (scale down)
+        transition: opacity 0.5s ease, transform 0.5s ease;  
 
         // Shape-specific styles and positions
-        &.shape-1 {
-            width: 100px;
-            height: 100px;
-            background: url('../assets/shapes/red-square.svg') no-repeat center;
-            background-size: contain;
-            top: 20%;
-            left: 10%;
-        }
+        // &.shape-1 {
+        //     background: url('../assets/shapes/red-square.svg') no-repeat center;
+        //     background-size: contain;
+        // }
 
-        &.shape-2 {
-            width: 150px;
-            height: 150px;
-            background: url('../assets/shapes/blue-circle.svg') no-repeat center;
-            background-size: contain;
-            top: 40%;
-            left: 50%;
-        }
+        // &.shape-2 {
+        //     background: url('../assets/shapes/blue-circle.svg') no-repeat center;
+        //     background-size: contain;
+        // }
 
-        &.shape-3 {
-            width: 140px;
-            height: 140px;
-            background: url('../assets/shapes/blue-hollow-circle.svg') no-repeat center;
-            background-size: contain;
-            top: 60%;
-            left: 30%;
-        }
+        // &.shape-3 {
+        //     background: url('../assets/shapes/blue-hollow-circle.svg') no-repeat center;
+        //     background-size: contain;
+        // }
 
-        &.shape-4 {
-            width: 180px;
-            height: 180px;
-            background: url('../assets/shapes/red-circle.svg') no-repeat center;
-            background-size: contain;
-            top: 80%;
-            left: 70%;
-        }
+        // &.shape-4 {
+        //     background: url('../assets/shapes/red-circle.svg') no-repeat center;
+        //     background-size: contain;
+        // }
+        
+        // &.shape-5 {
+        //     background: url('../assets/shapes/red-square.svg') no-repeat center;
+        //     background-size: contain;
+        // }
+
+        // &.shape-6 {
+        //     background: url('../assets/shapes/blue-circle.svg') no-repeat center;
+        //     background-size: contain;
+        // }
+
+        // &.shape-7 {
+        //     background: url('../assets/shapes/blue-hollow-circle.svg') no-repeat center;
+        //     background-size: contain;
+        // }
+
+        // &.shape-8 {
+        //     background: url('../assets/shapes/red-circle.svg') no-repeat center;
+        //     background-size: contain;
+        // }
+        // &.shape-9 {
+        //     background: url('../assets/shapes/red-square.svg') no-repeat center;
+        //     background-size: contain;
+        // }
+
+        // &.shape-10 {
+        //     background: url('../assets/shapes/blue-circle.svg') no-repeat center;
+        //     background-size: contain;
+        // }
+
+        // &.shape-11 {
+        //     background: url('../assets/shapes/blue-hollow-circle.svg') no-repeat center;
+        //     background-size: contain;
+        // }
+
+        // &.shape-12 {
+        //     background: url('../assets/shapes/red-circle.svg') no-repeat center;
+        //     background-size: contain;
+        // }
 
         // Class added when the shape should be visible
         &.visible {
             opacity: 1;
-            transform: translateY(0); // Move into view when visible
+            transform: scale(1); // Move into view when visible
         }
     }
 }
