prevent overflow scroll on shape container

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -254,6 +254,7 @@ h1 {
   position: relative;
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 .scroll-section .shape {
   position: absolute;
