fixed shapes not drawing after refresh bug

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -329,6 +329,68 @@ h1 {
         opacity: 0; // Start with opacity 0
         transform: scale(0.5); // Start with a smaller size (scale down)
         transition: opacity 0.5s ease, transform 0.5s ease;  
+        width: 100px;
+        height: 100px;
+
+        // Shape-specific styles and positions
+        // &.shape-1 {
+        //     background: url('../assets/shapes/red-square.svg') no-repeat center;
+        //     background-size: contain;
+        // }
+
+        // &.shape-2 {
+        //     background: url('../assets/shapes/blue-circle.svg') no-repeat center;
+        //     background-size: contain;
+        // }
+
+        // &.shape-3 {
+        //     background: url('../assets/shapes/blue-hollow-circle.svg') no-repeat center;
+        //     background-size: contain;
+        // }
+
+        // &.shape-4 {
+        //     background: url('../assets/shapes/red-circle.svg') no-repeat center;
+        //     background-size: contain;
+        // }
+        
+        // &.shape-5 {
+        //     background: url('../assets/shapes/red-square.svg') no-repeat center;
+        //     background-size: contain;
+        // }
+
+        // &.shape-6 {
+        //     background: url('../assets/shapes/blue-circle.svg') no-repeat center;
+        //     background-size: contain;
+        // }
+
+        // &.shape-7 {
+        //     background: url('../assets/shapes/blue-hollow-circle.svg') no-repeat center;
+        //     background-size: contain;
+        // }
+
+        // &.shape-8 {
+        //     background: url('../assets/shapes/red-circle.svg') no-repeat center;
+        //     background-size: contain;
+        // }
+        // &.shape-9 {
+        //     background: url('../assets/shapes/red-square.svg') no-repeat center;
+        //     background-size: contain;
+        // }
+
+        // &.shape-10 {
+        //     background: url('../assets/shapes/blue-circle.svg') no-repeat center;
+        //     background-size: contain;
+        // }
+
+        // &.shape-11 {
+        //     background: url('../assets/shapes/blue-hollow-circle.svg') no-repeat center;
+        //     background-size: contain;
+        // }
+
+        // &.shape-12 {
+        //     background: url('../assets/shapes/red-circle.svg') no-repeat center;
+        //     background-size: contain;
+        // }
 
         // Class added when the shape should be visible
         &.visible {
