--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -83,7 +83,7 @@ h1 {
                 position: relative;
 
                 a {
-                    color: $primary-color;
+                    color: $accent-color;
                     text-decoration: none;
                     font-size: 16px;
                     padding: 10px 15px;
@@ -339,6 +339,82 @@ h1 {
         }
     }
 }
+
+
+.resume-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 20; // Ensure it's above the shape-container
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+    
+    .resume-container {
+        border-radius: 100px;
+        background: none;
+        padding: 40px;
+        max-width: 800px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
+        height: 100%;
+
+        .header {
+            text-align: center;
+            h1 {
+                font-size: 2.5rem;
+                margin-bottom: 10px;
+                color: $primary-color;
+            }
+            p {
+                font-size: 1rem;
+                color: $accent-color;
+            }
+            a {
+                color: #0073e6;
+                text-decoration: none;
+            }
+        }
+
+        .summary, .skills, .experience, .education, .profiles {
+            margin: 20px 0;
+            h2 {
+                font-size: 1.8rem;
+                color: #fff;
+                border-bottom: 2px solid $primary-color;
+                padding-bottom: 10px;
+            }
+            p, li {
+                font-size: 1rem;
+                color: #fff;
+            }
+            ul {
+                padding-left: 20px;
+            }
+        }
+
+        .skills ul {
+            columns: 2;
+            li {
+                list-style-type: disc;
+            }
+        }
+
+        .experience h3, .education h3 {
+            font-size: 1.4rem;
+            color: $accent-color;
+        }
+
+        .profiles a {
+            color: #0073e6;
+            text-decoration: none;
+        }
+    }
+}
+
 
   
 @media (max-width: 768px) {
