--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -464,6 +464,115 @@ h1 {
 }
 
 
+.contact-section {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    // align-items: center;
+    gap: 100px;
+    padding: 40px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1), 
+                0 -4px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    margin-bottom: 40px;
+    z-index: 1;
+  
+    .contact-info {
+        color: $primary-color;
+        background: url("../assets/images/hexagon-grid.svg") no-repeat;
+
+        h2 {
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+        p {
+            font-size: 16px;
+        }
+    }
+  
+    .contact-form {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 20px;
+        width: 300px; // Adjust width as needed
+        border: $accent-color 2px solid;
+        border-radius: 25px;
+        background-color: #bfe1f8;
+        padding: 20px;
+
+  
+        input, textarea {
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            outline: none;
+            
+            &::placeholder {
+            color: #aaa;
+            }
+        }
+  
+        button {
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            color: #fff;
+            background-color: #4169E1; // Button color
+            cursor: pointer;
+            transition: background-color 0.3s;
+    
+            &:hover {
+            background-color: #3658A7;
+            }
+        }
+    }
+}
+
+footer {
+    background-color: #000;
+    color: #fff;
+    padding: 20px;
+}
+  
+.footer-top {
+    display: flex;
+    justify-content: space-between;
+}
+  
+.logo {
+    a {
+        font-size: 24px;
+        font-weight: bold;
+    }
+    p {
+        font-size: 14px;
+    }
+}
+  
+.footer-bottom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+
+
+    .social-icons {
+        list-style: none;
+        display: flex;
+        justify-content: center;
+        li {
+                margin: 0 5px;
+                a {
+                color: #fff;
+                font-size: 18px;
+                }
+        }
+    }
+}
+  
+
   
 @media (max-width: 768px) {
     .section-divider {
