--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -84,6 +84,19 @@ h1 {
     transform: skewY(-8deg);
 }
 
+.social-icons {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    li {
+            margin: 0 5px;
+            a {
+            color: #fff;
+            font-size: 18px;
+            }
+    }
+}
+
 .hero {
     position: relative;
     min-height: 100vh;
@@ -468,13 +481,12 @@ h1 {
     position: relative;
     display: flex;
     justify-content: center;
-    // align-items: center;
     gap: 100px;
     padding: 40px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1), 
                 0 -4px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    margin-bottom: 40px;
+    // margin-bottom: 40px;
     z-index: 1;
   
     .contact-info {
@@ -496,12 +508,13 @@ h1 {
         justify-content: center;
         flex-direction: column;
         gap: 20px;
-        width: 300px; // Adjust width as needed
+        width: fit-content; // Adjust width as needed
         border: $accent-color 2px solid;
         border-radius: 25px;
         background-color: #bfe1f8;
         padding: 20px;
-
+        position: relative;
+        z-index: 1;
   
         input, textarea {
             padding: 10px;
@@ -510,7 +523,7 @@ h1 {
             outline: none;
             
             &::placeholder {
-            color: #aaa;
+                color: #aaa;
             }
         }
   
@@ -528,48 +541,55 @@ h1 {
             }
         }
     }
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+        justify-content: center;
+        .contact-form {
+            margin: 0 auto;
+        }
+
+        .contact-info {
+            display: none;
+        }
+        
+    }
 }
 
 footer {
     background-color: #000;
     color: #fff;
     padding: 20px;
+    position: relative;
+    z-index: 1;
+
+    .footer-top {
+        display: flex;
+        justify-content: space-between;
+    }
+      
+    .logo {
+        a {
+            font-size: 24px;
+            font-weight: bold;
+        }
+        p {
+            font-size: 24px;
+            color: $primary-color
+        }
+    }
 }
   
-.footer-top {
-    display: flex;
-    justify-content: space-between;
-}
-  
-.logo {
-    a {
-        font-size: 24px;
-        font-weight: bold;
-    }
-    p {
-        font-size: 14px;
-    }
-}
   
 .footer-bottom {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+}
 
-
-    .social-icons {
-        list-style: none;
-        display: flex;
-        justify-content: center;
-        li {
-                margin: 0 5px;
-                a {
-                color: #fff;
-                font-size: 18px;
-                }
-        }
-    }
+.footer-section-divider {
+    bottom: 20px;
 }
   
 
@@ -577,5 +597,21 @@ footer {
 @media (max-width: 768px) {
     .section-divider {
         margin-bottom: 80px;
+    }
+
+    .contact-section {
+        flex-direction: column;
+        justify-content: center;
+        background: url("../assets/images/hexagon-grid.svg") no-repeat;
+    }
+
+    .footer-section-divider {
+        bottom: 120px;
+    }
+}
+
+@media (max-width: 480px) {
+    .footer-bottom {
+        flex-direction: column;
     }
 }
