--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -511,7 +511,7 @@ h1 {
         width: fit-content; // Adjust width as needed
         border: $accent-color 2px solid;
         border-radius: 25px;
-        background-color: #bfe1f8;
+        background-color: #334c5d;
         padding: 20px;
         position: relative;
         z-index: 1;
@@ -535,10 +535,6 @@ h1 {
             background-color: #4169E1; // Button color
             cursor: pointer;
             transition: background-color 0.3s;
-    
-            &:hover {
-            background-color: #3658A7;
-            }
         }
     }
 
