--- a/src/css/index.css
+++ b/src/css/index.css
@@ -64,9 +64,10 @@ h1 {
   list-style: none;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .social-icons li {
-  margin: 0 5px;
+  margin: 0 15px;
 }
 .social-icons li a {
   color: #fff;
@@ -81,14 +82,16 @@ h1 {
 }
 .hero .navbar {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-evenly;
+  align-items: stretch;
+  background-color: #212223;
   position: relative;
   z-index: 10;
-  margin-top: 40px;
+  height: 80px;
 }
 .hero .navbar .nav-links {
   display: flex;
+  align-items: stretch;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -96,16 +99,106 @@ h1 {
 .hero .navbar .nav-links li {
   margin: 0 15px;
   position: relative;
+  display: flex;
+  align-items: center;
 }
 .hero .navbar .nav-links li a {
   color: #66C3FF;
   text-decoration: none;
   font-size: 16px;
   padding: 10px 15px;
-  display: block;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
 }
 .hero .navbar .nav-links li a:hover {
   color: white;
+}
+.hero .navbar .nav-links li:hover {
+  background-color: #1c1c1c;
+  cursor: pointer;
+}
+.hero .navbar .hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  justify-content: space-around;
+  align-items: center;
+  transition: transform 0.5s ease;
+  z-index: 11;
+  background-color: rgba(255, 255, 255, 0.04);
+  padding: 4px;
+}
+.hero .navbar .hamburger span {
+  width: 100%;
+  height: 3px;
+  background-color: #66C3FF;
+  transition: all 0.3s;
+}
+.hero .navbar .mobile-menu {
+  position: fixed;
+  top: -18px;
+  right: -100%;
+  background-color: rgba(245, 0, 87, 0.9019607843);
+  width: 70%;
+  height: 100vh;
+  padding: 0;
+  text-align: center;
+  transition: right 0.4s ease;
+  padding-top: 25%;
+}
+.hero .navbar .mobile-menu li {
+  width: 100%;
+  margin: 0;
+  list-style: none;
+  margin: 15px 0;
+}
+.hero .navbar .mobile-menu li a {
+  display: inline-block;
+  padding: 15px;
+  width: 100%;
+  text-decoration: none;
+  color: #ffffff;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+.hero .navbar .mobile-menu li a:hover {
+  background-color: #1c1c1c;
+  color: #f50057;
+}
+.hero .navbar .mobile-menu.active {
+  right: 0;
+}
+@media (max-width: 768px) {
+  .hero .navbar .social-icons {
+    padding: 0;
+  }
+  .hero .navbar .social-icons li {
+    margin: 0 5px;
+  }
+}
+@media (max-width: 480px) {
+  .hero .navbar {
+    background-color: transparent;
+    margin-right: 40px;
+    position: fixed;
+    right: 0;
+    align-items: center;
+  }
+  .hero .navbar .nav-links {
+    display: none;
+  }
+  .hero .navbar .hamburger {
+    display: flex;
+  }
+  .hero .navbar .hamburger.active {
+    transform: rotate(90deg);
+  }
+  .hero .navbar .social-icons {
+    display: none;
+  }
 }
 .hero .hero-content {
   display: flex;
@@ -334,6 +427,7 @@ h1 {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   height: auto;
+  margin-top: 145px;
 }
 .resume-overlay .resume-container .button-container {
   width: 100%;
@@ -422,7 +516,7 @@ h1 {
   width: fit-content;
   border: #66C3FF 2px solid;
   border-radius: 25px;
-  background-color: #334c5d;
+  background-color: #286a97;
   padding: 20px;
   position: relative;
   z-index: 1;
@@ -452,6 +546,10 @@ h1 {
   .contact-section {
     flex-direction: column;
     justify-content: center;
+    width: 100%;
+    gap: 0;
+    margin: 0;
+    padding: 0;
   }
   .contact-section .contact-form {
     margin: 0 auto;
