--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -11,26 +11,6 @@ h1 {
     color: $accent-color;
     margin-left: 24px;
     font-size: 36px;
-
-    // &::before,
-    // &::after {
-    //     content: '';
-    //     position: absolute;
-    //     top: 50%;
-    //     width: 20px;
-    //     height: 20px;
-    //     background-color: #f39c12; // Adjust the circle color
-    //     border-radius: 50%;
-    //     transform: translateY(-50%);
-    // }
-
-    // &::before {
-    //     left: -40px; // Adjust the spacing from the text
-    // }
-
-    // &::after {
-    //     right: -40px; // Adjust the spacing from the text
-    // }
 }
 
 
@@ -88,12 +68,14 @@ h1 {
     list-style: none;
     display: flex;
     justify-content: center;
+    align-items: center;
+
     li {
-            margin: 0 5px;
-            a {
+        margin: 0 15px;
+        a {
             color: #fff;
             font-size: 18px;
-            }
+        }
     }
 }
 
@@ -105,36 +87,139 @@ h1 {
     
     .navbar {
         display: flex;
-        justify-content: center;
-        align-items: center;
-        // padding: 20px 50px;
-        // background-color: $primary-color;
+        justify-content: space-evenly;
+        align-items: stretch;
+        background-color: #212223;
         position: relative;
         z-index: 10;
-        margin-top: 40px;
-
+        height: 80px;
 
         .nav-links {
             display: flex;
+            align-items: stretch;
             list-style: none;
             margin: 0;
             padding: 0;
-
+        
             li {
                 margin: 0 15px;
                 position: relative;
+                display: flex;
+                align-items: center;
+                
 
                 a {
                     color: $accent-color;
                     text-decoration: none;
                     font-size: 16px;
                     padding: 10px 15px;
-                    display: block;
+                    display: flex;
+                    width: 100%;
+                    height: 100%;
+                    align-items: center;
 
                     &:hover {
                         color: lighten($white, 20%);
                     }
                 }
+                &:hover {
+                    background-color: #1c1c1c;
+                    cursor: pointer;
+                }
+            }
+        }
+
+        // Hamburger icon
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+            width: 30px;
+            height: 30px;
+            justify-content: space-around;
+            align-items: center;
+            transition: transform 0.5s ease;
+            z-index: 11; 
+            background-color: rgba(255, 255, 255, 0.04);
+            padding: 4px;
+
+            span {
+                width: 100%;
+                height: 3px;
+                background-color: $accent-color;
+                transition: all 0.3s;
+            }
+        }
+
+        // Mobile menu styling
+        .mobile-menu {
+            position: fixed;
+            top: -18px;
+            right: -100%; // Start off-screen to the right
+            background-color: #f50057e6;
+            width: 70%; // Take up half of the screen
+            height: 100vh;
+            padding: 0;
+            text-align: center;
+            transition: right 0.4s ease; // Slide in animation and fade in
+            padding-top: 25%;
+
+            li {
+                width: 100%;
+                margin: 0;
+                list-style: none;
+                margin: 15px 0;
+
+                a {
+                    display: inline-block;
+                    padding: 15px;
+                    width: 100%;
+                    text-decoration: none;
+                    color: $white;
+                    transition: background-color 0.3s ease, color 0.3s ease;
+
+                    &:hover {
+                        background-color: #1c1c1c; // Same hover background color as the normal links
+                        color: $primary-color; // Same hover text color as the normal links
+                    }
+                }
+            }
+
+            &.active {
+                right: 0; // Slide into view when active
+            }
+        }
+
+        @media (max-width: 768px) {
+            .social-icons {
+                padding: 0;
+                li {
+                    margin: 0 5px;
+                }
+            }
+        }
+
+        // Show hamburger icon
+        @media (max-width: 480px) {
+            background-color: transparent;
+            margin-right: 40px;
+            position: fixed;
+            right: 0;
+            align-items: center;
+            .nav-links {
+                display: none;
+            }
+
+            .hamburger {
+                display: flex;
+            }
+
+            .hamburger.active {
+                transform: rotate(90deg);
+            }
+
+            .social-icons {
+                display: none;
             }
         }
     }
@@ -412,6 +497,7 @@ h1 {
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         border-radius: 10px;
         height: auto;
+        margin-top: 145px;
 
         .button-container {
             width: 100%;
@@ -486,7 +572,6 @@ h1 {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1), 
                 0 -4px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    // margin-bottom: 40px;
     z-index: 1;
   
     .contact-info {
@@ -511,7 +596,7 @@ h1 {
         width: fit-content; // Adjust width as needed
         border: $accent-color 2px solid;
         border-radius: 25px;
-        background-color: #334c5d;
+        background-color: #286a97;
         padding: 20px;
         position: relative;
         z-index: 1;
@@ -541,6 +626,11 @@ h1 {
     @media (max-width: 768px) {
         flex-direction: column;
         justify-content: center;
+        width: 100%;
+        gap: 0;
+        margin: 0;
+        padding: 0;
+        
         .contact-form {
             margin: 0 auto;
         }
