--- a/src/css/index.css
+++ b/src/css/index.css
@@ -385,17 +385,17 @@ h1 {
   margin-bottom: 40px;
 }
 
-.scroll-section {
+.resume-section {
   position: relative;
-  height: 166vh;
+  min-height: 100vh;
 }
-.scroll-section .shape-container {
+.resume-section .shape-container {
   position: relative;
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   overflow: hidden;
 }
-.scroll-section .shape {
+.resume-section .shape {
   position: absolute;
   opacity: 0;
   transform: scale(0.5);
@@ -403,31 +403,33 @@ h1 {
   width: 100px;
   height: 100px;
 }
-.scroll-section .shape.visible {
+.resume-section .shape.visible {
   opacity: 1;
   transform: scale(1);
 }
 
 .resume-overlay {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 20;
+  z-index: 1;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1;
 }
 .resume-overlay .resume-container {
   border-radius: 100px;
   background: none;
   padding: 40px;
   max-width: 800px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1), 0 -4px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
-  height: auto;
+  min-height: 100%;
   margin-top: 145px;
+  z-index: 2;
 }
 .resume-overlay .resume-container .button-container {
   width: 100%;
@@ -488,12 +490,14 @@ h1 {
 .contact-section {
   position: relative;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 100px;
   padding: 40px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1), 0 -4px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   z-index: 1;
+  margin-top: 50px;
 }
 .contact-section .contact-info {
   color: #f50057;
@@ -553,6 +557,7 @@ h1 {
   }
   .contact-section .contact-form {
     margin: 0 auto;
+    padding: 0;
   }
   .contact-section .contact-info {
     display: none;
@@ -606,5 +611,8 @@ footer .logo p {
 @media (max-width: 480px) {
   .footer-bottom {
     flex-direction: column;
+  }
+  .social-icons li {
+    margin: 0;
   }
 }/*# sourceMappingURL=index.css.map */
