--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,3 +3,5 @@ $secondary-color: #1c1c1c;
 $accent-color: #66C3FF;
 $white: #ffffff;
 $dark-text: #333333;
+$box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1), 
+0 -4px 10px rgba(0, 0, 0, 0.1);
