--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -450,13 +450,13 @@ h1 {
 }
 
 
-.scroll-section {
+.resume-section {
     position: relative;
-    height: 166vh; 
+    min-height: 100vh; 
 
     .shape-container {
         position: relative;
-        height: 100%;
+        min-height: 100%;
         width: 100%;
         overflow: hidden;
     }
@@ -479,25 +479,27 @@ h1 {
 
 
 .resume-overlay {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 20; // Ensure it's above the shape-container
+    z-index: 1; // Ensure it's above the shape-container
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1;
     
     .resume-container {
         border-radius: 100px;
         background: none;
         padding: 40px;
         max-width: 800px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        box-shadow: $box-shadow;
         border-radius: 10px;
-        height: auto;
+        min-height: 100%;
         margin-top: 145px;
+        z-index: 2;
 
         .button-container {
             width: 100%;
@@ -566,14 +568,15 @@ h1 {
 .contact-section {
     position: relative;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 100px;
     padding: 40px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1), 
-                0 -4px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: $box-shadow;
     border-radius: 10px;
     z-index: 1;
-  
+    margin-top: 50px;
+
     .contact-info {
         color: $primary-color;
         background: url("../assets/images/hexagon-grid.svg") no-repeat;
@@ -630,9 +633,10 @@ h1 {
         gap: 0;
         margin: 0;
         padding: 0;
-        
+
         .contact-form {
             margin: 0 auto;
+            padding: 0;
         }
 
         .contact-info {
@@ -699,5 +703,9 @@ footer {
 @media (max-width: 480px) {
     .footer-bottom {
         flex-direction: column;
+    }
+
+    .social-icons li {
+        margin: 0;
     }
 }
