--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -296,6 +296,10 @@ h1 {
                     bottom: 0;
                 }
 
+                .headshot {
+                    box-shadow: $box-shadow;
+                }
+
                 .img-description {
                     font-size: 24px;
                 }
