--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,6 +5,7 @@ body, html {
     padding: 0;
     font-family: 'Arial', sans-serif;
     background-color: $secondary-color;
+    scroll-behavior: smooth;
 }
 
 h1 {
@@ -358,7 +359,7 @@ h1 {
 }  
 
 
-.about-section {
+#about-section {
     color: white;
     margin-top: 80px;
     padding: 0 50px;
@@ -376,7 +377,7 @@ h1 {
 }
 
 
-.portfolio-section {
+#portfolio-section {
     margin: 50px 0;
     padding: 0 50px;
 
@@ -569,7 +570,7 @@ h1 {
 }
 
 
-.contact-section {
+#contact-section {
     position: relative;
     display: flex;
     flex-wrap: wrap;
@@ -607,6 +608,14 @@ h1 {
         padding: 20px;
         position: relative;
         z-index: 1;
+
+        h2 {
+            text-align: center;
+            font-size: 24px;
+            margin-top: 45px;
+            color: white;
+            font-style: bold;
+        }
   
         input, textarea {
             padding: 10px;
@@ -616,6 +625,12 @@ h1 {
             
             &::placeholder {
                 color: #aaa;
+            }
+        }
+
+        p {
+            a {
+                color: #f2f980;
             }
         }
   
@@ -693,7 +708,7 @@ footer {
         margin-bottom: 80px;
     }
 
-    .contact-section {
+    #contact-section {
         flex-direction: column;
         justify-content: center;
         background: url("../assets/images/hexagon-grid.svg") no-repeat;
