--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -232,7 +232,7 @@ h1 {
         height: 100%;
         padding: 200px 50px;
         background: url('../assets/images/shapes.svg');
-        z-index: 2;
+        z-index: 1;
 
         .text-content {
             max-width: 600px;
@@ -608,7 +608,7 @@ h1 {
         padding: 20px;
         position: relative;
         z-index: 1;
-
+        
         h2 {
             text-align: center;
             font-size: 24px;
@@ -616,7 +616,7 @@ h1 {
             color: white;
             font-style: bold;
         }
-  
+        
         input, textarea {
             padding: 10px;
             border: none;
@@ -628,13 +628,37 @@ h1 {
                 color: #aaa;
             }
         }
-
+        
         p {
             a {
                 color: #f2f980;
             }
         }
-  
+        
+        .validation-box {
+            display: flex;
+
+            .error{
+                margin-top: 30px;
+                color: #e3ff12;
+            }
+            
+            
+            .success{
+                margin-top: 30px;
+                color: #82ff82;
+            }
+            
+            
+        }
+        #form_error, .success_icon, .error_msg {
+            margin: 0.5rem;
+            display: none;
+        }
+        .error_msg {
+            color: #e3ff12;
+        }
+        
         button {
             padding: 10px;
             border: none;
@@ -656,13 +680,42 @@ h1 {
 
         .contact-form {
             margin: 0 auto;
-            // padding: 0;
         }
 
         .contact-info {
             display: none;
         }
         
+    }
+}
+.spinner-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+.spinner {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-left-color: #333;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+}
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
     }
 }
 
@@ -702,7 +755,13 @@ footer {
     bottom: 20px;
 }
   
-
+.success-message {
+    background-color: #1c1c1c;
+    position: fixed;
+    font-size: 22px;
+    top: 0;
+    z-index: 9999;
+}
   
 @media (max-width: 768px) {
     .section-divider {
